--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Dec  5 15:05:11 2018</p>
+         Last Run: Wed Dec  5 16:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -33,7 +33,7 @@
                         <td>Clear</td>
                         <td>-14</td>
                         <td>-19</td>
-                        <td>5</td>
+                        <td>3</td>
                         <td>86</td>
                         <td>0</td>
                         <td>8</td>
@@ -45,7 +45,7 @@
                         <td>Clear</td>
                         <td>-15</td>
                         <td>-20</td>
-                        <td>6</td>
+                        <td>5</td>
                         <td>87</td>
                         <td>0</td>
                         <td>8</td>
@@ -57,12 +57,12 @@
                         <td>Clear</td>
                         <td>-16</td>
                         <td>-21</td>
-                        <td>7</td>
-                        <td>90</td>
+                        <td>6</td>
+                        <td>91</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>SSW</td>
-                        <td>14</td>
+                        <td>SW</td>
+                        <td>15</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "3",
                  "5",
-                 "6",
-                 "7"
+                 "6"
                ]
              },
              {
@@ -173,7 +173,7 @@
                "data":[
                  "86",
                  "87",
-                 "90"
+                 "91"
                ]
              },
              {
@@ -184,7 +184,7 @@
                "data":[
                  "19",
                  "16",
-                 "14"
+                 "15"
                ]
              }
            ]
@@ -219,12 +219,13 @@
                      options: options
                   });
                </script>
+         <img src="http://www.wmiradar.com/alberta/latest_loop.gif">
          <hr style="border-width:5px ">
       </div>
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Dec  5 15:05:11 2018</p>
+         Last Run: Wed Dec  5 16:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -253,7 +254,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>45</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -265,7 +266,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>44</td>
+                        <td>45</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -397,8 +398,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "46",
                  "45",
-                 "44",
                  "26"
                ]
              }
@@ -439,7 +440,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Dec  5 15:05:11 2018</p>
+         Last Run: Wed Dec  5 16:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -467,7 +468,7 @@
                         <td>66</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>WSW</td>
+                        <td>SW</td>
                         <td>37</td>
                      </tr>
                      <tr>
@@ -475,12 +476,12 @@
                         <td>Partly Cloudy</td>
                         <td>0</td>
                         <td>-3</td>
-                        <td>1</td>
+                        <td>2</td>
                         <td>61</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>45</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -492,7 +493,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>SW</td>
-                        <td>52</td>
+                        <td>53</td>
                      </tr>
                   </tbody>
                </table>
@@ -591,7 +592,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "2",
-                 "1",
+                 "2",
                  "1"
                ]
              },
@@ -613,8 +614,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "37",
-                 "45",
-                 "52"
+                 "46",
+                 "53"
                ]
              }
            ]
@@ -654,7 +655,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Dec  5 15:05:11 2018</p>
+         Last Run: Wed Dec  5 16:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 10, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -682,8 +683,8 @@
                         <td>76</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>W</td>
-                        <td>70</td>
+                        <td>WSW</td>
+                        <td>71</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -695,7 +696,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>53</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -703,7 +704,7 @@
                         <td>-5</td>
                         <td>-10</td>
                         <td>10</td>
-                        <td>80</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
@@ -818,7 +819,7 @@
                "data":[
                  "76",
                  "77",
-                 "80"
+                 "79"
                ]
              },
              {
@@ -827,8 +828,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "70",
-                 "53",
+                 "71",
+                 "54",
                  "43"
                ]
              }
