--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Dec  5 23:05:06 2018</p>
+         Last Run: Thu Dec  6 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -31,26 +31,26 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>-6</td>
-                        <td>-10</td>
-                        <td>1</td>
-                        <td>62</td>
-                        <td>0</td>
-                        <td>8</td>
-                        <td>WSW</td>
-                        <td>26</td>
-                     </tr>
-                     <tr>
-                        <td>11:00 AM</td>
-                        <td>Clear</td>
-                        <td>-4</td>
                         <td>-7</td>
+                        <td>-11</td>
                         <td>1</td>
-                        <td>61</td>
+                        <td>59</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
                         <td>28</td>
+                     </tr>
+                     <tr>
+                        <td>11:00 AM</td>
+                        <td>Partly Cloudy</td>
+                        <td>-5</td>
+                        <td>-9</td>
+                        <td>1</td>
+                        <td>58</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>WSW</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -58,7 +58,7 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>1</td>
-                        <td>59</td>
+                        <td>56</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -89,8 +89,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-10",
-                 "-7",
+                 "-11",
+                 "-9",
                  "-6"
                ]
              },
@@ -101,8 +101,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-6",
-                 "-4",
+                 "-7",
+                 "-5",
                  "-3"
                ]
              }
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "62",
-                 "61",
-                 "59"
+                 "59",
+                 "58",
+                 "56"
                ]
              },
              {
@@ -182,8 +182,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "26",
                  "28",
+                 "30",
                  "32"
                ]
              }
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Dec  5 23:05:06 2018</p>
+         Last Run: Thu Dec  6 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -253,7 +253,7 @@
                         <td>1</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>38</td>
+                        <td>35</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -261,11 +261,11 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>2</td>
-                        <td>63</td>
+                        <td>64</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>47</td>
+                        <td>42</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -273,11 +273,11 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>1</td>
-                        <td>58</td>
+                        <td>59</td>
                         <td>0</td>
                         <td>11</td>
                         <td>SW</td>
-                        <td>54</td>
+                        <td>48</td>
                      </tr>
                   </tbody>
                </table>
@@ -387,8 +387,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "68",
-                 "63",
-                 "58"
+                 "64",
+                 "59"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "38",
-                 "47",
-                 "54"
+                 "35",
+                 "42",
+                 "48"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Dec  5 23:05:06 2018</p>
+         Last Run: Thu Dec  6 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 10, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -468,19 +468,19 @@
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>73</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-4</td>
-                        <td>-8</td>
+                        <td>-3</td>
+                        <td>-7</td>
                         <td>5</td>
-                        <td>78</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>56</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -488,11 +488,11 @@
                         <td>-4</td>
                         <td>-8</td>
                         <td>5</td>
-                        <td>82</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>45</td>
+                        <td>41</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,7 +520,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-7",
-                 "-8",
+                 "-7",
                  "-8"
                ]
              },
@@ -532,7 +532,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-3",
-                 "-4",
+                 "-3",
                  "-4"
                ]
              }
@@ -602,8 +602,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "77",
-                 "78",
-                 "82"
+                 "77",
+                 "81"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "73",
-                 "56",
-                 "45"
+                 "66",
+                 "51",
+                 "41"
                ]
              }
            ]
