--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 05:05:02 2018</p>
+         Last Run: Thu Dec  6 06:05:37 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -46,7 +46,7 @@
                         <td>-5</td>
                         <td>-9</td>
                         <td>1</td>
-                        <td>55</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -61,7 +61,7 @@
                         <td>56</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>WSW</td>
+                        <td>SW</td>
                         <td>17</td>
                      </tr>
                   </tbody>
@@ -172,7 +172,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "56",
-                 "55",
+                 "56",
                  "56"
                ]
              },
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 05:05:02 2018</p>
+         Last Run: Thu Dec  6 06:05:37 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -249,11 +249,11 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>1</td>
-                        <td>61</td>
+                        <td>60</td>
                         <td>1</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>21</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -261,7 +261,7 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>1</td>
-                        <td>57</td>
+                        <td>56</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SW</td>
@@ -277,7 +277,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>36</td>
+                        <td>35</td>
                      </tr>
                   </tbody>
                </table>
@@ -386,8 +386,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "61",
-                 "57",
+                 "60",
+                 "56",
                  "52"
                ]
              },
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "21",
+                 "22",
                  "27",
-                 "36"
+                 "35"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 05:05:03 2018</p>
+         Last Run: Thu Dec  6 06:05:37 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 10, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -463,36 +463,36 @@
                         <td>Partly Cloudy</td>
                         <td>-4</td>
                         <td>-8</td>
-                        <td>5</td>
-                        <td>78</td>
+                        <td>4</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>44</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-5</td>
                         <td>-9</td>
-                        <td>5</td>
-                        <td>79</td>
+                        <td>4</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>41</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-6</td>
                         <td>-10</td>
-                        <td>5</td>
-                        <td>82</td>
+                        <td>10</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>38</td>
+                        <td>43</td>
                      </tr>
                   </tbody>
                </table>
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
-                 "5",
-                 "5"
+                 "4",
+                 "4",
+                 "10"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "78",
-                 "79",
-                 "82"
+                 "77",
+                 "77",
+                 "81"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "44",
-                 "41",
-                 "38"
+                 "54",
+                 "46",
+                 "43"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 05:05:03 2018</p>
+         Last Run: Thu Dec  6 06:05:37 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 12, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -675,7 +675,7 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>-3</td>
                         <td>-8</td>
                         <td>3</td>
@@ -683,10 +683,22 @@
                         <td>0</td>
                         <td>16</td>
                         <td>W</td>
-                        <td>28</td>
+                        <td>37</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>-3</td>
+                        <td>-8</td>
+                        <td>2</td>
+                        <td>64</td>
+                        <td>0</td>
+                        <td>16</td>
+                        <td>W</td>
+                        <td>30</td>
+                     </tr>
+                     <tr>
+                        <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>-3</td>
                         <td>-8</td>
@@ -695,19 +707,7 @@
                         <td>0</td>
                         <td>16</td>
                         <td>W</td>
-                        <td>23</td>
-                     </tr>
-                     <tr>
-                        <td>11:00 PM</td>
-                        <td>Clear</td>
-                        <td>-4</td>
-                        <td>-10</td>
-                        <td>2</td>
-                        <td>66</td>
-                        <td>0</td>
-                        <td>16</td>
-                        <td>W</td>
-                        <td>20</td>
+                        <td>24</td>
                      </tr>
                   </tbody>
                </table>
@@ -736,7 +736,7 @@
                "data":[
                  "-8",
                  "-8",
-                 "-10"
+                 "-8"
                ]
              },
              {
@@ -748,7 +748,7 @@
                "data":[
                  "-3",
                  "-3",
-                 "-4"
+                 "-3"
                ]
              }
            ]
@@ -817,8 +817,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "64",
-                 "65",
-                 "66"
+                 "64",
+                 "65"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "28",
-                 "23",
-                 "20"
+                 "37",
+                 "30",
+                 "24"
                ]
              }
            ]
