--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 07:05:03 2018</p>
+         Last Run: Thu Dec  6 08:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -31,13 +31,13 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>-7</td>
-                        <td>-11</td>
+                        <td>-8</td>
+                        <td>-12</td>
                         <td>1</td>
                         <td>56</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>WSW</td>
+                        <td>SW</td>
                         <td>11</td>
                      </tr>
                      <tr>
@@ -46,7 +46,7 @@
                         <td>-5</td>
                         <td>-9</td>
                         <td>1</td>
-                        <td>55</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
@@ -58,11 +58,11 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>1</td>
-                        <td>56</td>
+                        <td>57</td>
                         <td>1</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>15</td>
+                        <td>17</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,7 +89,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-11",
+                 "-12",
                  "-9",
                  "-6"
                ]
@@ -101,7 +101,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-7",
+                 "-8",
                  "-5",
                  "-3"
                ]
@@ -172,8 +172,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "56",
-                 "55",
-                 "56"
+                 "56",
+                 "57"
                ]
              },
              {
@@ -184,7 +184,7 @@
                "data":[
                  "11",
                  "12",
-                 "15"
+                 "17"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 07:05:03 2018</p>
+         Last Run: Thu Dec  6 08:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -253,7 +253,7 @@
                         <td>1</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>22</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -273,7 +273,7 @@
                         <td>2</td>
                         <td>-1</td>
                         <td>1</td>
-                        <td>52</td>
+                        <td>51</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
@@ -388,7 +388,7 @@
                "data":[
                  "60",
                  "56",
-                 "52"
+                 "51"
                ]
              },
              {
@@ -397,7 +397,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "22",
+                 "21",
                  "27",
                  "35"
                ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 07:05:03 2018</p>
+         Last Run: Thu Dec  6 08:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 10, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -468,17 +468,17 @@
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>55</td>
+                        <td>56</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-5</td>
-                        <td>-9</td>
+                        <td>-10</td>
                         <td>7</td>
-                        <td>79</td>
+                        <td>78</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>W</td>
                         <td>45</td>
                      </tr>
@@ -492,7 +492,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>41</td>
+                        <td>42</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,7 +520,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-8",
-                 "-9",
+                 "-10",
                  "-10"
                ]
              },
@@ -602,7 +602,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "78",
-                 "79",
+                 "78",
                  "82"
                ]
              },
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "55",
+                 "56",
                  "45",
-                 "41"
+                 "42"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 07:05:03 2018</p>
+         Last Run: Thu Dec  6 08:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 12, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -683,11 +683,11 @@
                         <td>0</td>
                         <td>16</td>
                         <td>W</td>
-                        <td>36</td>
+                        <td>35</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-3</td>
                         <td>-8</td>
                         <td>2</td>
@@ -695,7 +695,7 @@
                         <td>0</td>
                         <td>16</td>
                         <td>W</td>
-                        <td>30</td>
+                        <td>28</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -703,11 +703,11 @@
                         <td>-3</td>
                         <td>-8</td>
                         <td>2</td>
-                        <td>66</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>16</td>
                         <td>W</td>
-                        <td>24</td>
+                        <td>23</td>
                      </tr>
                   </tbody>
                </table>
@@ -818,7 +818,7 @@
                "data":[
                  "65",
                  "65",
-                 "66"
+                 "65"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "36",
-                 "30",
-                 "24"
+                 "35",
+                 "28",
+                 "23"
                ]
              }
            ]
